--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -39,7 +39,7 @@
 %     OBJECTIVE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\section{Objective}
+% \section{Objective}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
@@ -49,7 +49,23 @@
 % \subsection{Languages:}
 % %\location{}
 \raggedright{
-	C/C++ \textbullet{} Python \textbullet{} Shell script \textbullet{} SQL \textbullet{} Machine learning \textbullet{} Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} basic HTML \textbullet{} \LaTeX\ \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
+	C/C++ \textbullet{}
+	Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn) \textbullet{}
+	BASH shell script \textbullet{}
+	% Git/SVN \textbullet{}
+	Git \textbullet{}
+	SQL \textbullet{}
+	Machine learning (which one?) \textbullet{} 
+	% Mac OS/Linux \textbullet{}
+	% Microsoft Office/Apple Keynote/Pages \textbullet{}
+	% HTML \textbullet{}
+	\LaTeX\ \textbullet{}
+	% Vim \textbullet{}
+	% ROOT framework \textbullet{} 
+	Statistics (probability, LSE, MLE, Hypothesis test, A/B test) \textbullet{}
+	Data analysis (detail) \textbullet{}
+	% cross department communication \textbullet{}
+	% teamwork\\
 }
 % \subsection{Frameworks:}
 % ROOT
@@ -60,49 +76,91 @@
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Project
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Projects}
+
+% \raggedright{
+% 	MuscleHub AB Test \textbullet{} National park biodiversity \textbullet{} Exploring LEGO bricks \textbullet{} Discovery of handwashing \textbullet{} The GitHub history of the Scala language \textbullet{} 3-year loans
+% }
+
+% \runsubsection{Titanic}
+% \descript{}
+% \location{}
+% \begin{tightemize}
+% \item currently Top 13\%, still improving
+% \end{tightemize}
+% \sectionsep
+
+\runsubsection{project name}
+\descript{}
+%\location{}
+\begin{tightemize}
+\item What I did on the project which is most important
+\end{tightemize}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
 
-\runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
-\descript{| Physicist}
-\location{2015 - 2018 | Geneva, Switzerland}
+\runsubsection{University of Oklahoma}
+\descript{| Graduate Research and Teaching Assistant}
+\location{2011 - 2018 | Norman, Oklahoma}
 \begin{tightemize}
-\item Analysed proton-proton collision data collected by ATLAS detector.
-\item Used Python with PyROOT to perform data analysis and automate the visualization of results.
-\item Developed a new object-oriented programming framework using C++ to increase the performance and accuracy of the real election efficiency measurement. The new framework can process datasets 10 times larger than the previous one, automate analysis procedures reducing a week manual operations to an afternoon, and increase the efficiency upto 98\%.
-%\item Co-developed and maintained the C++ based Tag-and-probe framework.
+\item Published 5 top journal papers and 7 conference notes, and presented in 2 conferences.
+\item Relocated to CERN since 2015. Analyzed large experimental data to search for supersymmertic particles among other duties.
+\item Been teaching assistant for college and graduate level courses.
+% \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
+% \item Dedicated to the search of supersymmertic particles.
+% Used C++ and Python to implement toy Monte Carlo, cut and count, signal extraction, noise suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
+
 \end{tightemize}
 \sectionsep
 
-\runsubsection{University of Oklahoma}
+\runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
 \descript{| Graduate Research Assistant}
-\location{2011 - 2018 | Norman, Oklahoma}
+\location{2015 - 2018 | Geneva, Switzerland}
 \begin{tightemize}
-\item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
-\item Dedicated to the search of supersymmertic particles. Used C++ and Python to implement toy Monte Carlo, cut and count, maximum likelihood, and least Chi square fit to analyse collision data within 95\% confidence level.
-\item Published 5 journal papers and 7 conference notes, and presented in 2 conferences.
+\item Analyzed proton-proton collision data collected with the ATLAS detector complex.
+\item Took shift in the ATLAS control room to monitor the ATLAS detector operation.
+\item Calibrated the electron isolation efficiency by analyzing 30M+ events and the results were released as a central version for the entire collaboration to use.
+% Mainly contributed on electron isolation measurement, real lepton efficiency measurement, and NUHM2 model.
+\item Used C++ and Python with PyROOT to perform data analysis and automate the visualization of results.
+\item Mined data from Grid and reduced the data size from 400 TB to $\sim$200 GB with $\sim$30M entries in total and 400+ variables per file.
+\item Analyzed large dataset using methods including Monte Carlo simulation, event selection and reconstruction, background suppression (i.e. EDA, feature processing, and feature engineering). 
+Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space.
+\item Developed a new object-oriented programming framework in C++ increasing the performance and accuracy of the real lepton efficiency measurement.
+The new framework processes datasets 10 times larger than the previous one, automates analysis procedures reducing a week manual operations to 5 hours, and increase the efficiency to 98\%.
+% \item Co-developed and maintained the C++ based Tag-and-probe framework.
+
+% The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
+% Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
+
+% The various analysis methods such as Monte Carlo simulation, event selection and reconstruction (data mining \& EDA), background suppression (feature processing \& feature engineering) are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
+% The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
 \end{tightemize}
 \sectionsep
 
 \runsubsection{Academia Sinica}
 \descript{| Research Assistant}
 \location{2009 - 2011 | Taipei, Taiwan}
-\begin{tightemize}
-\item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
-\item Analysed the kinematic distributions of the MC simulated events.
-%\item Helped the Tsinghua University to setup the China Jinping Underground Laboratory.
-\end{tightemize}
+% \begin{tightemize}
+% \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
+% \item Analyzed the kinematic distributions of the MC simulated events.
+% \item Helped the Tsinghua University to setup the China Jinping Underground Laboratory.
+% \end{tightemize}
 \sectionsep
 
 \runsubsection{Taiwan Semiconductor Manufacturing Company, LTD. (TSMC)}
 \descript{| SPICE R\&D engineer}
 \location{2006 - 2009 | Hsinchu, Taiwan}
 \begin{tightemize}
-\item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model parameterization, model accuracy validation, model documentation, and customer support.
-\item Cross departments discussion about SPICE model specification, production planning and scheduling.
-%\item
+\item High-voltage SPICE model data collection automation, model parameterization, model accuracy validation, model documentation, and customer support.
+% \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model parameterization, model accuracy validation, model documentation, and customer support.
+% \item Cross departments discussion about SPICE model specification, production planning and scheduling.
 \end{tightemize}
 \sectionsep
 
@@ -113,44 +171,79 @@
 \section{Education} 
 
 \runsubsection{University of Oklahoma}
-%\descript{| Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
+% \descript{| Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
 \descript{| Ph.D. in Physics}
 \location{2011 - 2018 | Norman, OK}
-\begin{tightemize}
-\item \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
-\end{tightemize}
+% \begin{tightemize}
+% \item \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
+% \end{tightemize}
 \sectionsep
 
 \runsubsection{National Taiwan University}
-%\descript{| M.S. in Physics | Cum. GPA: 3.86 / 4.00}
+% \descript{| M.S. in Physics | Cum. GPA: 3.86 / 4.00}
 \descript{| M.S. in Physics}
 \location{2003 - 2006 | Taipei, Taiwan}
 \begin{tightemize}
-\item \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
+% \item \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
 \item Graduate student thesis Awards, The Physical Society of Taiwan, 2006
 \end{tightemize}
 \sectionsep
 
-%\runsubsection{Chung Yuan Christian University}
-%\descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
-%\location{1998 - 2002 | Chung Li, Taiwan}
-%\begin{tightemize}
-%\item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
-%\item Certificate of Academic Achievement Award, 2000 - 2001
-%\end{tightemize}
-%\sectionsep
+% \runsubsection{Chung Yuan Christian University}
+% \descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
+% \location{1998 - 2002 | Chung Li, Taiwan}
+% \begin{tightemize}
+% \item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
+% \item Certificate of Academic Achievement Award, 2000 - 2001
+% \end{tightemize}
+% \sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     PUBLICATIONS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Papers:
+% 1. Electron efficiency measurements with the ATLAS detector using 2015-2016 LHC proton-proton collision data
+%    https://cds.cern.ch/record/2157687
+% 2. Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector
+%    PRD 97, 052010 (2018)
+%    https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010
+% 3. Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^-1$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector
+%    JHEP09 (2017) 084
+%    https://link.springer.com/article/10.1007/JHEP09(2017)084
+% 4. Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector
+%    JHEP09 (2016) 001
+%    https://link.springer.com/article/10.1007/JHEP09(2016)001
+% 5. Search for supersymmetry at $\sqrt{s} = 13$ in final states with jets and two same-sign leptons or three leptons with the ATLAS detector
+%    Eur. Phys. J. C 76 (2016) 259
+%    https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8
+
+% Conference note
+% 1. Search for scalar diphoton resonances with 15.4/fb of data collected at $\sqrt{s} = 13$ in 2015 and 2016 with the ATLAS detector
+%    https://cds.cern.ch/record/2199338
+% 2. Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collisions data at $\sqrt{s} = 13$ TeV
+%    https://cds.cern.ch/record/2261952
+% 3. Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector
+%    https://cds.cern.ch/record/2196580
+% 4. Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV
+%    https://cds.cern.ch/record/2138074
+% 5. Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector
+%    https://cds.cern.ch/record/2114088
+% 6. Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data
+%    https://cds.cern.ch/record/2142831
+% 7. Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LEADERSHIP
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Leadership}
-President of Taiwanese Student Association (TSA) at the University of Oklahoma\\
-\location{2012 - 2013}
-%\begin{tightemize}
-%\item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
-%\item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
-%\end{tightemize}
-\sectionsep
+% \section{Leadership}
+% President of Taiwanese Student Association (TSA) at the University of Oklahoma\\
+% \location{2012 - 2013}
+% \begin{tightemize}
+% \item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
+% \item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
+% \end{tightemize}
+% \sectionsep
 
 \end{document}
