--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -25,7 +25,7 @@
 % Variables
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\CompanyName}{Company Name}
+\newcommand{\CompanyName}{Company}
 \newcommand{\CompanyAddress}{City, State}
 \newcommand{\JobPositionName}{Data Scientist}
 \newcommand{\ManagerName}{Madam or Sir to whom it may concern}
@@ -77,7 +77,7 @@
 %\fi
 \closing{Yours faithfully,} % 非以對方姓氏稱呼對方時
 %\closing{Yours sincerely,} % 知道對方姓氏時
-\enclosure[Attached]{resume}
+%\enclosure[Attached]{resume}
 
 \makelettertitle
 
@@ -105,30 +105,38 @@
 
 \justifying
 %(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
-%I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
+% I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
 I am applying for the position of \JobPositionName{} in \CompanyName{}.
 I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
 
 
-Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to become familiar with the knowledge and tools commonly used in the industry.
-I believe these courses can help me to switch from academia to the industry smoothly.
-The skills such as querying data using SQL, manipulating and cleaning data using Pandas, virtualizing results using Matplotlib and Seaborn, and machine learning using scikit-learn and Keras are in my toolbox now.
-After finishing capstone projects and receiving certificates from online courses, I participated in the competitions on Kaggle to sharpen my data analysis skills and learn from other experts.
+% Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to become familiar with the knowledge and tools commonly used in the industry.
+% I have taken several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera.
+I have taken several data analysis and machine learning online courses.
+% I believe these courses can help me to switch from academia to the industry smoothly.
+The skills such as querying data using SQL, manipulating and cleaning data using Pandas, visualizing results using Matplotlib and Seaborn, and machine learning using scikit-learn and Keras are in my toolbox now.
+Several projects are done while taking courses.
+% After finishing capstone projects and receiving certificates from online courses, I participated in the competitions on Kaggle to sharpen my data analysis skills and learn from other experts.
+Now I participate in the competitions on Kaggle to sharpen my data analysis skills and learn from other experts.
 
-%For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
-%I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
-%For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
-%My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
+% For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
+% I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
+% For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
+% My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
 The Ph.D. in high energy physics trained me to be a careful researcher and strengthened my problem solving skills.
-I have worked in analyzing the data collected by the ATLAS experiment at the European Organization for Nuclear Research (CERN) for the past several years.
+% I have worked in analyzing the data collected by the ATLAS experiment at the European Organization for Nuclear Research (CERN) for the past several years.
 In high energy physics, we analyze the experimental data and compare the results with the theoretical predictions.
+The experimental raw data are produced at a rate about 50 TB/s.
 In order to analyze the huge amount of data produced by the experiment, I developed an analysis framework using C/C++ and Python.
-The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are virtualized using Python with the PyRoot package.
-Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
-Because CERN is a huge international orginazation, I learned how to collaborate with colleagues coming from different countries with different cultures while I lived at CERN.
+% The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
+% The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
+% Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
+% Because CERN is a huge international orginazation, I learned how to collaborate with colleagues coming from different countries with different cultures while I lived at CERN.
+% I have no problem to work with colleagues as a team because I collaborated with people from different countries while I worked at CERN in the past three years.
 
 
-I would welcome the chance to speak with you about the responsibilities of the \JobPositionName{} position if you think I am a qualified candidate.
+I would welcome the chance to speak with you about the responsibilities of the \JobPositionName{} position.
+% if you think I am a qualified candidate.
 My resume containing detailed work experience and education is attached.
 I am confident that my background makes me a unique candidate to fit this challenging position and I would be a valuable addition to your team.
 I look forward to hearing from you.
