--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -45,56 +45,57 @@
 % %     SKILLS
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \section{Skills}
+% FOR RESUME
+\section{Skills}
 
-% \location{OS:}
-% Mac, Linux, Unix, Windows\\
-% \location{Languages:}
-% C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, VBA\\
-% \location{Framework:}
-% ROOT\\
-% \location{Database:}
-% SQL\\
-% \location{Tools:}
-% Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
-
-% % \raggedright{
-% % 	C/C++ \textbullet{}
-% % 	Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn) \textbullet{}
-% % 	BASH shell script \textbullet{}
-% % 	% Git/SVN \textbullet{}
-% % 	Git \textbullet{}
-% % 	SQL \textbullet{}
-% % 	Machine learning (which one?) \textbullet{} 
-% % 	% Mac OS/Linux \textbullet{}
-% % 	% Microsoft Office/Apple Keynote/Pages \textbullet{}
-% % 	% HTML \textbullet{}
-% % 	\LaTeX\ \textbullet{}
-% % 	% Vim \textbullet{}
-% % 	% ROOT framework \textbullet{} 
-% % 	Statistics (probability, LSE, MLE, Hypothesis test, A/B test) \textbullet{}
-% % 	Data analysis (detail) \textbullet{}
-% % 	% cross department communication \textbullet{}
-% % 	% teamwork\\
-% % }
-% \sectionsep
+\raggedright{
+    C/C++
+    \textbullet{}
+    Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn)
+    \textbullet{}
+    BASH shell script
+    \textbullet{}
+    % VBA
+    % \textbullet{}
+    % Git/SVN
+    % \textbullet{}
+    Git
+    \textbullet{}
+    SQL
+    \textbullet{}
+    supervised learning (kNN, linear/logistic regression, decision tree, SVM)
+    \textbullet{}
+    unsupervised learning (k-Means)
+    \textbullet{} 
+    % Mac OS/Linux
+    % \textbullet{}
+    % Microsoft Office/Apple Keynote/Pages
+    % \textbullet{}
+    % HTML \textbullet{}
+    \LaTeX\
+    \textbullet{}
+    % Vim \textbullet{}
+    % ROOT framework \textbullet{} 
+    Statistics (probability, LSE, MLE, Hypothesis test, A/B test, bootstrapping)
+    % \textbullet{}
+    % Data analysis (detail)
+    % \textbullet{}
+    % cross department communication
+    % \textbullet{}
+    % teamwork\\
+}
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Project
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \section{Projects}
+
+% FOR RESUME
+\section{Projects}
 
 % \raggedright{
 % 	MuscleHub AB Test \textbullet{} National park biodiversity \textbullet{} Exploring LEGO bricks \textbullet{} Discovery of handwashing \textbullet{} The GitHub history of the Scala language \textbullet{} 3-year loans
 % }
-
-% \runsubsection{Titanic}
-% \descript{}
-% \location{}
-% \begin{tightemize}
-% \item currently Top 13\%, still improving
-% \end{tightemize}
-% \sectionsep
 
 % \runsubsection{project name}
 % \descript{}
@@ -103,6 +104,16 @@
 % \item What I did on the project which is most important
 % \end{tightemize}
 % \sectionsep
+
+\runsubsection{Real lepton efficiency}
+% \descript{}
+\location{}
+\begin{tightemize}
+\item Particle classification. Increasing the real lepton identification efficiency from 80\% to 98\%.
+\item Wrote data filtration algorithms in C++ reducing the data size by a factor of 100.
+\item Developed a new framework to increase the performance. Reducing the run time from one week to 5 hours.
+\end{tightemize}
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -114,12 +125,11 @@
 \descript{| Graduate Research and Teaching Assistant}
 \location{2011 - 2018 | Norman, Oklahoma}
 \begin{tightemize}
-\item Published 4 top journal papers and 6 conference notes, and presented in 2 conferences.
-\item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
-\item Teaching assistant for college and graduate level courses.
+% FOR RESUME & CV
+\item 6 semesters teaching assistant for college and graduate level courses.
 % \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
-% \item Dedicated to the search of supersymmertic particles.
-% Used C++ and Python to implement toy Monte Carlo, cut and count, signal extraction, noise suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
+\item Stationed at CERN and dedicated to search for supersymmertic particles since 2015.
+% \item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
 \end{tightemize}
 \sectionsep
 
@@ -127,23 +137,29 @@
 \descript{| Graduate Research Assistant}
 \location{2015 - 2018 | Geneva, Switzerland}
 \begin{tightemize}
-\item Analyzed large proton-proton collision data collected with the ATLAS detector complex using C++ and Python and automated the visualization of results.
-\item Took shift in the ATLAS control room (ACR) to monitor the ATLAS inner detector operation.
+% FOR RESUME
 \item Calibrated the electron isolation efficiency by analyzing 30M+ events. The results became a central released version of the ATLAS collaboration.
-% Mainly contributed on electron isolation measurement, real lepton efficiency measurement, and NUHM2 model.
-% \item Used C++ and Python with PyROOT to perform data analysis and automate the visualization of results.
 \item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
-\item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total using methods including Monte Carlo simulation, event selection and reconstruction, background suppression etc. (i.e. EDA, feature processing, and feature engineering). 
-Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
-\item Developed a new object-oriented programming framework in C++ increasing the performance and accuracy of the real lepton efficiency measurement.
-The new framework processes datasets 10 times larger than the previous one, automates analysis procedures reducing a week manual operations to 5 hours, and increases the efficiency to 98\%.
+% \item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total using methods including Monte Carlo simulation, event selection and reconstruction, background suppression etc. (i.e. EDA, feature processing, and feature engineering). 
+% Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
+\item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total by performing EDA, feature processing and engineering, LSE and MLE model fitting, and statistics hypothesis test.
+
+
+% FOR CV
+% \item Participated in E/gamma combine performance group, same-sign 3 leptons + jets analysis group, and Higgsino LSP analysis group.
+% Mainly contributed on electron isolation measurement, real lepton efficiency measurement, and Non-Universal Higgsino Mass model with 2 extra parameters (NUHM2) search.
+% \item Calibrated the electron isolation efficiency by analyzing $e/\gamma$ events. The results became a central released version of the ATLAS collaboration.
+% \item Used C++ and Python to implement toy Monte Carlo, event selection and reconstruction, background suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
+% % The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
+% % Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
+% % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
+% % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction (data mining \& EDA), background suppression (feature processing \& feature engineering) are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
+% \item Developed a new object-oriented programming framework in C++ increasing the performance and accuracy of the real lepton efficiency measurement.
+% The new framework processes datasets 10 times larger than the previous one, automates analysis procedures reducing a week manual operations to 5 hours, and increases the efficiency to 98\%.
 % \item Co-developed and maintained the C++ based Tag-and-probe framework.
-
-% The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
-% Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
-
-% The various analysis methods such as Monte Carlo simulation, event selection and reconstruction (data mining \& EDA), background suppression (feature processing \& feature engineering) are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
-% The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
+% % \item Analyzed large proton-proton collision data collected with the ATLAS detector complex using C++ and Python and automated the visualization of results.
+% % \item Used C++ and Python with PyROOT to perform data analysis and automate the visualization of results.
+% \item Took shift in the ATLAS control room (ACR) to monitor the ATLAS inner detector operation.
 \end{tightemize}
 \sectionsep
 
@@ -151,14 +167,19 @@ The new framework processes datasets 10 times larger than the previous one, auto
 \descript{| Research Assistant}
 \location{2009 - 2011 | Taipei, Taiwan}
 \begin{tightemize}
-\item Designed simulation program for the high purity germanium detector using C++ with GEANT4 package and investigated the ambient background radiation.
+% FOR RESUME
+\item Analyzed simulated and experimental datasets to classify different background.
+
+% FOR CV
+% % \item Analyzed simulated and experimental datasets to investigate the ambient background radiation. Developed an algorithm to reduce the background.
+% \item Designed simulation program for the high purity germanium detector using C++ with GEANT4 package.% and investigated the ambient background radiation.
 % \item Investigated the ambient background radiation and simulated the physics processes when high energy particles interact with the germanium detector.
-\item Maintained the extra-low temperature (77 K) environment by setting up liquid Nitrogen cooling system at Taiwan Power Company Nuclear Station II.
-\item Mined and analyzed large experimental datasets and helped to setup RAIDs for data storage.
-\item Communicated across relevant governmental department and private companies.
-% \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
-% \item Analyzed the kinematic distributions of the MC simulated events.
-\item Helped the Tsinghua University to setup the China Jinping Underground Laboratory (CJPL) and built low ambient background shielding using 4 tons of Oxygen free copper bricks.
+% \item Maintained the extra-low temperature (77 K) environment by setting up liquid Nitrogen cooling system at Taiwan Power Company Nuclear Station II.
+% % \item Mined and analyzed large experimental datasets and helped to setup RAIDs for data storage.
+% \item Communicated across relevant governmental department and private companies.
+% % % \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
+% % % \item Analyzed the kinematic distributions of the MC simulated events.
+% % \item Helped the Tsinghua University to setup the China Jinping Underground Laboratory (CJPL) and built low ambient background shielding using 4 tons of Oxygen free copper bricks.
 \end{tightemize}
 \sectionsep
 
@@ -166,14 +187,18 @@ The new framework processes datasets 10 times larger than the previous one, auto
 \descript{| SPICE R\&D engineer}
 \location{2006 - 2009 | Hsinchu, Taiwan}
 \begin{tightemize}
-\item Project leader for 3 projects, and supporter for 4 projects.
-\item SPICE model specification, production planning and scheduling.
-\item In charged of the Mix-mode and BCD HV SPICE Model projects with the following process technologies: 0.13 $\mu$m, 0.18 $\mu$m, 0.20 $\mu$m, 0.25 $\mu$m, 0.35 $\mu$m 0.5 $\mu$m, 0.60 $\mu$m.
-% \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model parameterization, model accuracy validation, model documentation, and customer support.
-\item High-voltage SPICE model raw data collection automation, model electrical characteristic parameterization, model accuracy and completenes validation, model documentation, and customer support.
-\item Modeling MOSFET, BJT, Diode, Resistor, Capacitor, Back-end etc.
-\item Tested the newly installed probe station and programmed to set up the automation reducing 20\% of the measurement time.
-% \item Cross departments discussion about SPICE model specification, production planning and scheduling.
+% FOR RESUME
+\item Model data collection automation, parameterization, accuracy and completeness validation, documentation, and customer support.
+
+% FOR CV
+% \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model electrical characteristic parameterization, model accuracy validation, model documentation, and customer support.
+% % \item High-voltage SPICE model raw data collection automation, model parameterization, model accuracy and completeness validation, model documentation, and customer support.
+% \item Project leader for 3 projects, and supporter for 4 projects.
+% \item SPICE model specification, production planning and scheduling.
+% \item In charged of the Mix-mode and BCD HV SPICE Model projects with the following process technologies: 0.13 $\mu$m, 0.18 $\mu$m, 0.20 $\mu$m, 0.25 $\mu$m, 0.35 $\mu$m 0.5 $\mu$m, 0.60 $\mu$m.
+% % \item Modeling MOSFET, BJT, Diode, Resistor, Capacitor, Back-end etc.
+% \item Tested the newly installed probe station and programmed to set up the automation reducing 20\% of the measurement time.
+% % \item Cross departments discussion about SPICE model specification, production planning and scheduling.
 \end{tightemize}
 \sectionsep
 
@@ -191,9 +216,12 @@ The new framework processes datasets 10 times larger than the previous one, auto
 % \descript{| Ph.D. in Physics}
 \location{2011 - 2018 | Norman, OK}
 \begin{tightemize}
-\item Advisor: Patrick Skubic
-\item Dissertation: Search for electroweak production of supersymmetric states in non-universal higgs mass model with two extra parameters compressed scenario with the ATLAS detector\\
-      \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
+% FOR CV
+% \item Advisor: Patrick Skubic
+% \item Dissertation: Search for electroweak production of supersymmetric states in non-universal higgs mass model with two extra parameters compressed scenario with the ATLAS detector\\
+%       \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
+% FOR RESUME & CV
+\item Published 4 top journal papers and 6 conference notes, and presented in 2 conferences.
 \end{tightemize}
 \sectionsep
 
@@ -202,99 +230,108 @@ The new framework processes datasets 10 times larger than the previous one, auto
 % \descript{| M.S. in Physics}
 \location{2003 - 2006 | Taipei, Taiwan}
 \begin{tightemize}
-\item Advisor: Pao-Ti Chang
-\item Thesis: Measurements of branching fractions and CP asymmetries in $B \to \phi \phi K$ decays at Belle\\
-      \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
-\item Graduate student thesis Awards, The Physical Society of Taiwan, 2006
+% FOR CV
+% \item Advisor: Pao-Ti Chang
+% \item Thesis: Measurements of branching fractions and CP asymmetries in $B \to \phi \phi K$ decays at Belle\\
+%       \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
+% FOR RESUME & CV
+\item Graduate student thesis Awards, The Physical Society of Taiwan, 2006.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Chung Yuan Christian University}
-\descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
-\location{1998 - 2002 | Chung Li, Taiwan}
-\begin{tightemize}
-\item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
-\item Certificate of Academic Achievement Award, 2000 - 2001
-\end{tightemize}
-\sectionsep
+% \runsubsection{Chung Yuan Christian University}
+% \descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
+% \location{1998 - 2002 | Chung Li, Taiwan}
+% \begin{tightemize}
+% \item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
+% \item Certificate of Academic Achievement Award, 2000 - 2001
+% \end{tightemize}
+% \sectionsep
 
 
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  UNCOMMENT THE FOLLOWING SECTION FOR CV
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Publications}
-178 records on INSPIRE. Here lists the main contributions and links.
+% \section{Publications}
+% 178 records on INSPIRE. Here lists the main contributions and links.
 
-\runsubsection{Papers:}
-\location{}
-\begin{tightemize}
-\item Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010}{PRD 97, 052010 (2018)}
-\item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1007/JHEP09(2017)084}{JHEP09 (2017) 084}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8}{Eur. Phys. J. C 76 (2016) 259}
-\item Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1007/JHEP09(2016)001}{JHEP09 (2016) 001}
-\end{tightemize}
-\sectionsep
+% \runsubsection{Papers:}
+% \location{}
+% \begin{tightemize}
+% \item Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010}{PRD 97, 052010 (2018)}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2017)084}{JHEP09 (2017) 084}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8}{Eur. Phys. J. C 76 (2016) 259}
+% \item Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2016)001}{JHEP09 (2016) 001}
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Conference notes:}
-\location{}
-\begin{tightemize}
-\item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
-\item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
-\item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
-      % link: \href{https://cds.cern.ch/record/2157687}{ATLAS-CONF-2016-024}
-      link: \href{https://cds.cern.ch/record/2142831}{ATLAS-COM-CONF-2016-028}
-\item Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
-      link: \href{https://cds.cern.ch/record/2138074}{ATLAS-COM-CONF-2016-016}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2114088}{ATLAS-COM-CONF-2015-100}
-\end{tightemize}
-\sectionsep
+% \runsubsection{Conference notes:}
+% \location{}
+% \begin{tightemize}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
+% \item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
+% \item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
+%       % link: \href{https://cds.cern.ch/record/2157687}{ATLAS-CONF-2016-024}
+%       link: \href{https://cds.cern.ch/record/2142831}{ATLAS-COM-CONF-2016-028}
+% \item Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
+%       link: \href{https://cds.cern.ch/record/2138074}{ATLAS-COM-CONF-2016-016}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2114088}{ATLAS-COM-CONF-2015-100}
+% \end{tightemize}
+% \sectionsep
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% %     SKILLS
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Skills}
+% \section{Skills}
 
-\location{OS:}
-Mac, Linux, Unix, Windows\\
-\location{Languages:}
-C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, VBA\\
-\location{Framework:}
-ROOT\\
-\location{Database:}
-SQL\\
-\location{Tools:}
-Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
-\sectionsep
-
+% \location{Languages:}
+% C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script\\
+% \location{Framework:}
+% ROOT, HistFitter\\
+% \location{Database:}
+% SQL\\
+% \location{Tools:}
+% Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
+% \location{OS:}
+% Mac, Linux, Unix, Windows\\
+% \sectionsep
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LEADERSHIP
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Leadership}
+% \section{Leadership}
 
-\runsubsection{President of Taiwanese Student Association (TSA) at the University of Oklahoma}\\
-\location{2012 - 2013}
-\begin{tightemize}
-\item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
-\item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
-\end{tightemize}
-\sectionsep
+% \runsubsection{President of Taiwanese Student Association (TSA) at the University of Oklahoma}\\
+% \location{2012 - 2013}
+% \begin{tightemize}
+% \item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
+% \item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
+% \end{tightemize}
+% \sectionsep
 
 \end{document}
